--- a/CoreAnimationLearning/Launch Screen.storyboard
+++ b/CoreAnimationLearning/Launch Screen.storyboard
@@ -1,10 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="15505" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="01J-lp-oVM">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="15505" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="01J-lp-oVM">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15509"/>
-        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -12,6 +11,10 @@
         <scene sceneID="EHf-IW-A2E">
             <objects>
                 <viewController id="01J-lp-oVM" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="CCa-PY-mWK"/>
+                        <viewControllerLayoutGuide type="bottom" id="OQY-VN-aED"/>
+                    </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="Ze5-6b-2t3">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -22,12 +25,11 @@
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="lze-bU-fmr" firstAttribute="bottom" secondItem="Bcu-3y-fUS" secondAttribute="bottom" id="HyA-I5-WLi"/>
-                            <constraint firstItem="lze-bU-fmr" firstAttribute="leading" secondItem="Bcu-3y-fUS" secondAttribute="leading" id="Igk-uG-8PU"/>
+                            <constraint firstItem="lze-bU-fmr" firstAttribute="bottom" secondItem="OQY-VN-aED" secondAttribute="top" id="HyA-I5-WLi"/>
+                            <constraint firstItem="lze-bU-fmr" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leading" id="Igk-uG-8PU"/>
                             <constraint firstItem="lze-bU-fmr" firstAttribute="top" secondItem="Ze5-6b-2t3" secondAttribute="top" id="aG4-GB-RTq"/>
-                            <constraint firstItem="lze-bU-fmr" firstAttribute="trailing" secondItem="Bcu-3y-fUS" secondAttribute="trailing" id="rNY-Wb-UII"/>
+                            <constraint firstItem="lze-bU-fmr" firstAttribute="trailing" secondItem="Ze5-6b-2t3" secondAttribute="trailing" id="rNY-Wb-UII"/>
                         </constraints>
-                        <viewLayoutGuide key="safeArea" id="Bcu-3y-fUS"/>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
